                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 31-01-2005 fixed: Incorrect webrequest HEAD sent when a value was entered for HTTP Proxy Host but HTTP proxy was disabled.
  - 31-01-2005 fixed: videos (in certain resolutions) crash on subtitle/osd display, more commonly reported as "MPEG2 files don't play".
  - 31-01-2005 added: Representative screenshot for overlay modes.
  - 31-01-2005 added: SF patch from kraqh3d enhancing the music title format:
               %N = tracknumber, %T = title, %A = artist, %B = album, %G = genre, %Y = year, %% for a % sign.
  - 31-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 30-01-2005 updated: libcdio to version 0.71
  - 30-01-2005 updated: German language file
  - 30-01-2005 updated: Finnish language file (Thnx to jutski)
  - 30-01-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 30-01-2005 added: Auto gui resolution, sets highest enabled resolution, Settings->Appearance->Look and Feel->Resolution
  - 30-01-2005 added: Music listing style can be specified in options (in place of the Hide Track Numbers option)
  - 30-01-2005 fixed: Now Playing in My Videos goes to playlist view even if nothing is playing.
  - 30-01-2005 fixed: Canceling scan of videos causes freeze.
  - 30-01-2005 changed: Reboot from FatalErrorHandler works on all buttons now (thanks Fulg!)
  - 30-01-2005 fixed: Screensaver dims videos in ComboRenderer.
  - 30-01-2005 fixed: crash when leaving kai window
  - 30-01-2005 fixed: [ 1107267 ] CRC32::Compute needs to be case insensitive (All thumbs need to be recreated)
  - 30-01-2005 added: file manager, show free disk space for hdd and total size for DVD